Net Update Frequency & Crouch Unequipped

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -43,3 +43,8 @@ SteamDevAppId=480
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+NetServerMaxTickRate=60
+
+
+
