Health & Health HUD & Gameplay Framework

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,7 +44,7 @@ SteamDevAppId=480
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
-NetServerMaxTickRate=60
+NetServerMaxTickRate=120
 
 
 [/Script/Engine.CollisionProfile]
