--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,6 +16,7 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=0
+r.CustomDepth=3
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 bEnableWorldPartition=False
