High Ping Warning

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -105,3 +105,5 @@ NetServerMaxTickRate=120
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[PacketSimulationSettings]
+PktLag = 100
