Fix to CountdownTimer

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ MaxPlayers=100
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="D:/Unreal Engine 5/MPCourse/Blaster - Copy - 5.0 EA/Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -84,6 +84,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/GameStartupMap")
 +MapsToCook=(FilePath="/Game/Maps/TransitionMap")
 +MapsToCook=(FilePath="/Game/Maps/BlasterMap")
++MapsToCook=(FilePath="/Game/Maps/Teams")
++MapsToCook=(FilePath="/Game/Maps/CaptureTheFlag")
 PerPlatformBuildConfig=()
 PerPlatformTargetPlatformName=()
 
